--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+
+MYAPP_UPLOAD_STORE_FILE=blackholeav.keystore
+MYAPP_UPLOAD_KEY_ALIAS=blackholeav
+MYAPP_UPLOAD_STORE_PASSWORD=#1928374655#
+MYAPP_UPLOAD_KEY_PASSWORD=#1928374655#
